<resources>
    <string name="app_name">mpromptu</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Experia</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_out">Sign out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed out</string>
    <string name="google_title_text">Google sign in page</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="loading">Loading</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign in with Email</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="create_account">Create Account</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>

    <string name="snack_bar_text_item_removed">1 item removed</string>
    <string name="snack_bar_text_group_item_removed">1 group item removed</string>
    <string name="snack_bar_text_child_item_removed">1 child item removed</string>
    <string name="snack_bar_text_button_clicked">Button clicked! (position = %1$d)</string>
    <string name="snack_bar_action_undo">UNDO</string>

    <string name="dialog_message_item_pinned">Item pinned! (position = %1$d)</string>

    <!--create experience string-->
    <string name="createName">Title</string>
    <string name="createHint">enter..</string>
    <string name="createDescription">Description</string>
    <string name="createTimeDate">Set Time &amp; Date:</string>
    <string name="createStreet">Address</string>
    <string name="createCity">City:</string>
    <string name="createState">State:</string>
    <string name="createPhoto">Select Photo:</string>

    <string name="camera_button_text">Take Picture</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>

    <!-- number picker -->
    <string name="roboto_light">sans-serif-light</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="choose">Apply</string>
    <string name="cancel">Cancel</string>

</resources>