<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_create_top_margin"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentC">


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lg_creation_prompt"
        android:hint="@string/createName"
        android:layout_gravity="left" />


    <EditText
        android:id="@+id/etDescription"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lg_creation_prompt"
        android:hint="@string/createDescription"
        android:layout_gravity="left"
        android:layout_below="@+id/etName"
        android:layout_alignRight="@+id/linearLayout4"
        android:layout_alignEnd="@+id/linearLayout4" />





    <Button
        android:id="@+id/query"
        android:layout_width="@dimen/query_width"
        android:layout_height="@dimen/query_height"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="QUERY"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/etDescription"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/layout_signin"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            tools:visibility="gone"
            android:layout_weight="0.20">

            <TextView
                android:id="@+id/status_sign_in"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_1"
                android:text="@string/sign_in_prompt" />

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="@dimen/standard_field_width"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_anonymously" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_storage"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_weight="0.20">

        </LinearLayout>

        <ImageView
            android:id="@+id/ivSelectedPhoto"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon_take_photo" />




    </LinearLayout>


    <Button
        android:id="@+id/fire_event"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/icon_right_arrow"
        android:visibility="invisible"
        android:layout_below="@+id/button_camera"
        android:layout_centerHorizontal="true"
         />


    <Button
        android:id="@+id/button_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_button_text"
        android:layout_gravity="left"
        android:layout_alignTop="@+id/button_pick"
        android:layout_toRightOf="@+id/fire_event"
        android:layout_toEndOf="@+id/fire_event" />

    <Button
        android:id="@+id/button_pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose picture"
        android:layout_gravity="right"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignRight="@+id/fire_event"
        android:layout_alignEnd="@+id/fire_event" />

</RelativeLayout>
