<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvExperiences"
    card_view:cardBackgroundColor="@color/cardview_light_background"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="8dp"
    card_view:contentPaddingLeft="-15dp"
    card_view:contentPaddingRight="-15dp"
    app:cardUseCompatPadding="true"
    android:clipChildren="true"
    android:clickable="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="30dp"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/layout_signin"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            tools:visibility="gone"
            android:layout_weight="0.20"
            android:visibility="gone">

            <TextView
                android:id="@+id/status_sign_in"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_1"
                android:text="@string/sign_in_prompt" />

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="@dimen/standard_field_width"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_anonymously" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_storage"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_weight="0.20">

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:id="@+id/ivExperienceImage"
            android:src="@drawable/icon_take_photo"
            android:background="@drawable/pattern"
            android:layout_height="200dp"
            android:layout_marginBottom="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="-8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />

        <!--<ImageView-->
            <!--android:id="@+id/ivExperienceImage"-->
            <!--android:layout_width="match_parent"-->
            <!--android:transitionName="experienceimage"-->
            <!--android:layout_height="200dp"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:src="@drawable/icon_take_photo" />-->

        <Button
            android:id="@+id/button_camera"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/camera_button_text"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/mp_brown"
            android:textSize="12sp"
            android:layout_alignTop="@+id/button_pick"
            android:layout_alignRight="@+id/etDescription"
            android:layout_alignEnd="@+id/etDescription" />

        <Button
            android:id="@+id/button_pick"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Upload"
            android:backgroundTint="@color/mp_brown"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:layout_above="@+id/etTitle"
            android:layout_toRightOf="@+id/etDescription"
            android:layout_toEndOf="@+id/etDescription" />


        <EditText
            android:id="@+id/etDescription"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            tools:text="blahblahblah"
            android:maxLines="4"
            android:hint="Enter a short description"
            android:background="@drawable/bg_rectangle_edittext"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/mp_lightblue"
            android:visibility="visible"
            android:layout_below="@+id/etTitle"
            android:layout_alignLeft="@+id/layout_signin"
            android:layout_alignStart="@+id/layout_signin"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="wrap_content"
            android:textSize="24sp"
            android:padding="3dp"
            android:maxLines="2"
            android:layout_height="wrap_content"
            tools:text="Kayaking in Mendocino"
            android:hint="Enter Title"
            android:background="@drawable/bg_rectangle_edittext"
            android:textCursorDrawable="@null"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/mp_lightblue"
            android:layout_below="@+id/ivExperienceImage"
            android:layout_alignLeft="@+id/etDescription"
            android:layout_alignStart="@+id/etDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:id="@+id/view"
            android:layout_below="@+id/etDescription"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="gone"
            android:layout_marginTop="57dp" />


        <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/ivCategory"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/icon_impact_a"-->
        <!--app:backgroundTint="@color/colorPrimary"-->
        <!--android:layout_marginRight="10dp"-->
        <!--app:elevation="4dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignLeft="@+id/tvTitle"-->
        <!--android:layout_alignStart="@+id/tvTitle"-->
        <!--android:layout_margin="5dp"-->
        <!--/>-->


        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Next"
            android:id="@+id/btnNext"
            android:layout_below="@+id/etTags"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/mp_yellow"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

        <EditText
            tools:text="Tags"
            android:id="@+id/etTags"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_height="wrap_content"
            android:hint="Enter tags"
            android:background="@drawable/bg_rectangle_edittext"
            android:textCursorDrawable="@null"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/mp_lightblue"
            android:layout_below="@+id/etDescription"
            android:layout_alignLeft="@+id/etDescription"
            android:layout_alignStart="@+id/etDescription" />


    </RelativeLayout>




</android.support.v7.widget.CardView>